-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.5.0-beta1
-
None
-
935bf7b545b30b51fe549537e9d6f4713ad4306b
Issue at the ArgumentsAspect::fromMap() function:
void ArgumentsAspect::fromMap(const QVariantMap &map)
{
m_arguments = map.value(m_key).toBool();
}
toBool() must be replaced by toString(). Otherwise incorrect value stored as a command argument and next loading of settings breaks.
For Gerrit Dashboard: QTCREATORBUG-14404 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
111802,2 | Fix loading project settings | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |