Fix loading project settings

Incorrect conversion from the Variant to the String is fixed.

Change-Id: I082cdbeee1568d0b6b567232b50419d76572a197
Task-number: QTCREATORBUG-14404
Reviewed-by: hjk <hjk@theqtcompany.com>
Reviewed-by: Tobias Hunger <tobias.hunger@theqtcompany.com>